--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,16 @@
 [submodule "submodules/rust"]
 	path = submodules/rust
 	url = https://github.com/rust-lang/rust.vim
+[submodule "submodules/coc.nvim"]
+	path = submodules/coc.nvim
+	url = https://github.com/neoclide/coc.nvim.git
+	branch = release
+[submodule "submodules/fzf.vim"]
+	path = submodules/fzf.vim
+	url = https://github.com/junegunn/fzf.vim.git
+[submodule "submodules/fzf"]
+	path = submodules/fzf
+	url = https://github.com/junegunn/fzf.git
+[submodule "submodules/gruvbox"]
+	path = submodules/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
