--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ vim/.config/local/share/fish
 .nvimlog
 vim/.config/local/share/nvim/log
 vim/.config/local/share/nvim/lsp.log
+zsh/.config/zsh/.zsh_history
