--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ vim/.config/local/share/fish
 vim/.config/local/share/nvim/log
 vim/.config/local/share/nvim/lsp.log
 zsh/.config/zsh/.zsh_history
+vim/.config/local/share/nvim/log
+zsh
