--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ vim/.config/local/share/nvim/lsp.log
 zsh/.config/zsh/.zsh_history
 vim/.config/local/share/nvim/log
 vim/.config/local/share/nvim/shada/
+zsh/.config/zsh/.zcompdump
