--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "zsh/.config/zsh/plugins/powerlevel10k"]
 	path = zsh/.config/zsh/plugins/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k
+[submodule "zsh/.config/zsh/plugins/zsh-z"]
+	path = zsh/.config/zsh/plugins/zsh-z
+	url = https://github.com/agkozak/zsh-z.git
